infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bellor
  labels:
    name: bellor
    environment: production
